--- a/site/guide/model-validation/_add-model-findings.qmd
+++ b/site/guide/model-validation/_add-model-findings.qmd
@@ -10,6 +10,8 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
 1. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**. 
