--- a/site/guide/model-validation/_track_issue_resolution.qmd
+++ b/site/guide/model-validation/_track_issue_resolution.qmd
@@ -41,6 +41,8 @@ Low-severity findings (Level 3)
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
 1. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
