--- a/site/guide/model-workflows/_model-workflows-see.qmd
+++ b/site/guide/model-workflows/_model-workflows-see.qmd
@@ -25,6 +25,8 @@ While your lifecycle statuses and workflows are custom to your organization, som
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
 1. On the landing page of your model, locate the [model status]{.smallcaps} section: 
