--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -412,7 +412,7 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 
 #### Create a finding via a validation report
 
-1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.
+1. From the **{{< fa cubes >}} Inventory** in the ValidMind Platform, go to the model you connected to earlier.
 
 2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 
@@ -459,10 +459,9 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 3. Locate the Data Preparation section and click on **2.2.2. Model Performance** to expand that section.
 4. Under the Model Performance Metrics section, locate Findings then click **Link Finding to Report**.
 5. Click **{{< fa plus >}} Create New Finding** to add a finding.
-6. Enter in the details for your finding.
-7. Click **Save**.
-8. Select the finding you just added to link to your validation report.
-9. Click **Update Linked Findings** to insert your finding.
+6. Enter in the details for your finding and click **Save**.
+7. Select the finding you just added to link to your validation report.
+8. Click **Update Linked Findings** to insert your finding.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -588,7 +587,7 @@ Let's implement a *custom test* that calculates a confusion matrix:
 :::: {.slideover--r .three-quarters}
 **Implement a custom inline test**
 
-An *inline test* refers to a test written and executed within the same environment as the code being tested — <br>in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
+An *inline test* refers to a test written and executed within the same environment as the code being tested — in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells in the following sections under Implementing custom tests: **Implement a custom inline test**
