--- a/site/guide/model-workflows/_model-workflows-transition.qmd
+++ b/site/guide/model-workflows/_model-workflows-transition.qmd
@@ -11,6 +11,8 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
 1. If an action is available to your role, you'll see it listed under your model status on the model's landing page.
