--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -389,7 +389,9 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::: {.slideover--l .three-quarters .auto-collapse-10}
 **Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-Here, you can find executive summaries, track information on models, findings, and more. For example:
+Here, you can find executive summaries, track information on models, findings, and more.
+
+For example:
 
 1. Click **Models** to review reports on models.
 3. Click into any widget to review the models reported by that widget.
