--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -565,7 +565,9 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::: {.slideover--l .three-quarters .auto-collapse-10}
 **Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-Here, you can find executive summaries, track information on models, findings, and more. For example:
+Here, you can find executive summaries, track information on models, findings, and more.
+
+For example:
 
 1. Click **Findings** to review reports on findings.
 3. Click into any widget to review the findings reported by that widget.
