get-started/_sidebar.yaml

--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -1,5 +1,5 @@
 ---
-title: "QuickStart — Setup & Administration [coming soon]{.smallercaps .pink}"
+title: "Quickstart — Setup & Administration [coming soon]{.smallercaps .pink}"
 date: last-modified
 page-layout: full
 ---
