--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -1,5 +1,5 @@
 ---
-title: "QuickStart — Model Validation [coming soon]{.smallercaps .pink}"
+title: "Quickstart — Model Validation [coming soon]{.smallercaps .pink}"
 date: last-modified
 page-layout: full
 ---
