"changes for the new homepage: index.qmd, style.cs, etc...

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -8,59 +8,59 @@ resources:
 filters:
     - tachyons
 listing:
-  - id: developer
-    type: grid
-    grid-columns: 1
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    image-height: 250px
-    contents:
-      - path: get-started/quickstart-developer.qmd
-        # image: assets/img/developer-diagram.png
-  - id: validator
-    type: grid
-    grid-columns: 1
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    image-height: 250px
-    contents:
-      - path: get-started/quickstart-validator.qmd
-        # image: assets/img/validator-diagram.png
-  - id: admin
-    type: grid
-    grid-columns: 1
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    image-height: 250px
-    contents:
-      - path: get-started/quickstart-administrator.qmd
-        # image: assets/img/admin-diagram.png
+  # - id: developer
+  #   type: grid
+  #   grid-columns: 1
+  #   max-description-length: 250
+  #   sort: false
+  #   fields: [title, description]
+  #   image-height: 250px
+  #   contents:
+  #     - path: get-started/quickstart-developer.qmd
+  #       # image: assets/img/developer-diagram.png
+  # - id: validator
+  #   type: grid
+  #   grid-columns: 1
+  #   max-description-length: 250
+  #   sort: false
+  #   fields: [title, description]
+  #   image-height: 250px
+  #   contents:
+  #     - path: get-started/quickstart-validator.qmd
+  #       # image: assets/img/validator-diagram.png
+  # - id: admin
+  #   type: grid
+  #   grid-columns: 1
+  #   max-description-length: 250
+  #   sort: false
+  #   fields: [title, description]
+  #   image-height: 250px
+  #   contents:
+  #     - path: get-started/quickstart-administrator.qmd
+  #       # image: assets/img/admin-diagram.png
   - id: releases
     type: grid
-    grid-columns: 3
+    grid-columns: 1
     max-description-length: 150
     sort: false
     fields: [title, description]
     contents:
       - 2024-dec-06/release-notes.qmd
-      - 2024-oct-22/release-notes.qmd
-      - 2024-sep-25/release-notes.qmd
-      - 2024-sep-09/release-notes.qmd
-      - 2024-aug-13/release-notes.qmd
-      - 2024-jul-22/release-notes.qmd
-  - id: validmind-academy
-    type: grid
-    grid-columns: 1
-    image-height: 350px
-    sort: false
-    contents:
-    - path: training/training.qmd
+      #- 2024-oct-22/release-notes.qmd
+      #- 2024-sep-25/release-notes.qmd
+      #- 2024-sep-09/release-notes.qmd
+      #- 2024-aug-13/release-notes.qmd
+      #- 2024-jul-22/release-notes.qmd
+  # - id: validmind-academy
+  #   type: grid
+  #   grid-columns: 1
+  #   image-height: 350px
+  #   sort: false
+  #   contents:
+  #   - path: training/training.qmd
       # image: assets/img/hero-platform.png
-      title: "ValidMind Academy {{< fa graduation-cap >}}"
-      subtitle: "Learn by doing {{< fa chevron-right >}}"
+      # title: "ValidMind Academy {{< fa graduation-cap >}}"
+      # subtitle: "Learn by doing {{< fa chevron-right >}}"
     # - path: training/administrator-fundamentals/administrator-fundamentals-register.qmd
     #   image: training/administrator-fundamentals/administrator-fundamentals.png
     #   title: "Administrator Fundamentals {{< fa gear >}}"
@@ -73,7 +73,7 @@ listing:
     #   image: training/validator-fundamentals/validator-fundamentals.png
     #   title: "Validator Fundamentals {{< fa user-check >}}"
     #   subtitle: "Register now {{< fa chevron-right >}}"
-    fields: [title, subtitle]
+    # fields: [title, subtitle]
 ---
 
 <!-- <div class="watermark">MOCKUP — NOT A FINAL DESIGN</div> -->
@@ -153,7 +153,7 @@ a:hover {
 ::: {.w-60-ns}
 
 <!-- Add a search box to home page-->
-<input id="searchbox" placeholder="Ask a question">
+<input id="searchbox" placeholder="What are you looking for?">
 <div id="hits"></div>
 
 <!-- Use Lunr.js as the search library -->
@@ -170,17 +170,6 @@ a:hover {
 
 :::
 
-<!-- ::: {.w-40-ns}
-
-::: {.image-container}
-![](assets/img/platform-line-1.png)
-![](assets/img/platform-line-2.png)
-![](assets/img/platform-line-3.png)
-![](assets/img/platform-line-4.png)
-![](assets/img/platform-line-5.png)
-:::
-
-::: -->
 
 ::: {.w-10-ns}
 <!-- FILLER COLUMN DO NOT REMOVE -->
@@ -190,322 +179,93 @@ a:hover {
 
 :::
 
-<!-- GET STARTED SECTION -->
+<!-- COMBINED SECTION (UNIFIED BLOCK STYLE) -->
 
 ::: {.column-screen}
 
-:::: {.flex .flex-wrap .justify-around .get-started}
+::: {.w-80-ns .center}
 
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
+:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb4 .ph4}
 
+<!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
+::: {.flex .justify-between .mb4 .flex-wrap}
 
-::: {.w-25-ns .mb4}
-
-:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
-
-:::: {.ph4}
-
+::: {.w-30-ns .mb3}
+:::: {.ph3}
 :::: {.f4 .tl}
-[model development]{.smallcaps .accent}
+### Setup + Administration
 ::::
-
 ::: {.tl}
-Save time by **automating documentation** and **testing** for your models using the ValidMind Library.
-
-Try our Jupyter Notebook **code samples** that walk you through how to:
-
-- Explore documentation templates
-- Run and log tests
-- Integrate with your workflows
+Invite users and control access to ValidMind by managing user roles, groups, and permissions.  
+[Setup Quickstart](/training/fake-tour/product-tour.qmd){.button .button-green}
+:::
+:::
 :::
 
-:::{#developer}
-:::
-
-<!-- [about validmind](guide/guides.qmd){.button-green .cta} -->
-
-
-::::
-
-
-:::: 
-
-:::
-
-::: {.w-25-ns .mb4}
-
-:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
-
-:::: {.ph4}
-
+::: {.w-30-ns .mb3}
+:::: {.ph3}
 :::: {.f4 .tl}
-[model validation]{.smallcaps .accent}
+### Model Development
 ::::
-
 ::: {.tl}
-Quickly **assess compliance** by linking evidence from developers in your validation reports.
-
-**Tailor validation** to any regulatory or internal standard, and let ValidMind generate recommendations including for SR 11-7, SS1/23, E-23, and the EU AI Act.
-
-You can even create **challenger models**.
+Save time by automating documentation and testing for your models using the ValidMind Library.  
+[Developer Quickstart](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button .button-green}
+:::
+:::
 :::
 
-:::{#validator}
-:::
-
-<!-- [developer reference](/validmind/validmind.html){.button-green .cta} -->
-
-::::
-
-::::
-
-:::
-
-::: {.w-25-ns .mb4}
-
-:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
-
-:::: {.ph4}
-
+::: {.w-30-ns .mb3}
+:::: {.ph3}
 :::: {.f4 .tl}
-[setup + administration]{.smallcaps .accent}
+### Model Validation
 ::::
-
 ::: {.tl}
-**Invite users** and **control access** to ValidMind by managing user roles, groups, and permissons.
+Quickly assess compliance by linking evidence from developers in your validation reports.  
+[Validator Quickstart](training/validator-fundamentals/validator-fundamentals-register.qmd){.button .button-green}
 
-**Customize** the platform to **onboard** your organization, including:
-
-- Model inventory & registration
-- Documentation templates
-- Lifecycle workflows
+:::
+:::
 :::
 
-:::{#admin}
 :::
 
-<!-- [developer reference](/validmind/validmind.html){.button-green .cta} -->
 
+<!-- ValidMind Tour -->
+:::: {.tc}
+::: {.background-image style="background-image: url('/assets/img/digitalspace-colours.svg'); background-size: cover; background-position: center;"}
+
+#### ValidMind **Tour**
+
+ValidMind is a toolkit that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.
+
+[Validator Quickstart](/training/fake-tour/product-tour.qmd){.button .button-green}
 ::::
 
-:::: 
+<!-- Academy | Releases -->
+:::: {.flex .flex-wrap .justify-around}
 
-:::
-
-<span id="overview"></span>
-
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
-
+::: {.w-40-ns .mb4 .ph2 .br3 .pt4 .pb3 .ph4}
+:::: {.f2 .tl}
+**Validmind Academy**
 ::::
 
-:::
-
-<!-- OVERVIEW SECTION -->
-
-::: {.column-screen}
-
-:::: {.flex .flex-wrap .justify-around .overview}
-
-
-::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
-
-![](assets/img/icon-trust.svg){height=50px}
-
-:::: {.f4}
-Evelate [Model Risk Management]{.pink}
-:::: 
-
-:::: {.f5}
-Proactively identify and mitigate risks for more robust, reliable models.
-::::
-
-:::
-
-::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
-
-![](assets/img/bevalid-check.svg){height=50px}
-
-:::: {.f4}
-Stay [Compliant]{.pink}
-:::: 
-
-:::: {.f5}
-Meet even the most demanding legislation and governance policies.
-::::
-
-:::
-
-::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
-
-![](assets/img/icon-connect.svg){height=50px}
-
-:::: {.f4}
-Collaborate to [Innovate]{.pink}
-:::: 
-
-:::: {.f5}
-Bring together cross-functional teams to ensure transparency.
-::::
-
-:::
-
-::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
-
-![](assets/img/icon-automate.svg){height=50px}
-
-:::: {.f4}
-[Monitor]{.pink} for Success
-:::: 
-
-:::: {.f5}
-Keep your models performing with continous evaluation before problems arise.
-::::
-
-
-:::
-
-
-::::
-
-:::
-
-<!-- PRODUCT TOUR -->
-
-::: {.column-page}
-
-:::: {.flex .flex-wrap .justify-around .tour}
-
-::: {.w-40-ns .mb3 .tr .pt4}
-
-::: {.image-container}
-![](assets/img/platform-line-1.png)
-![](assets/img/platform-line-2.png)
-![](assets/img/platform-line-3.png)
-![](assets/img/platform-line-4.png)
-![](assets/img/platform-line-5.png)
-:::
-
-:::
-
-::: {.w-60-ns .mb3 .tc .pt4 .pr6}
-
-::: {.preview source="training/fake-tour/product-tour.qmd"}
-:::
-
-[What is ValidMind?](/about/overview.qmd){.button .button-green}
-
-:::
-
-
-::::
-
-:::
-
-<!-- TRAINING SECTION -->
-
-<!-- ::: {.column-page}
-
-
-:::: {.flex .flex-wrap .justify-around .training}
-
-
-:::: {.f2}
-![](about/ValidMind-logo-color.svg){height=50px} **Academy**
-::::
-
-:::: {.f4}
+:::: {.f3 .tl}
 Gain **hands-on experience** and explore what {{< var vm.product >}} has to offer with our interactive training environment.
 ::::
 
-::: {.w-100-ns .content-center .mt2}
-
-:::{#validmind-academy}
+::: {.f2 .tl}
+[Learn by doing](/training/training.qmd){.button .button-green}
+:::
 :::
 
-:::
-
-::::
-
-::: -->
-
-<!-- TRAINING WIP SECTION -->
-
-::: {.column-screen}
-
-:::: {.flex .flex-wrap .justify-around .training}
-
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
-
-
-::: {.w-50-ns .mb4 .tc .ph2 .br3 .pt4 .pb3 .ph4}
-
-:::: {.f2}
-![](about/ValidMind-logo-color.svg){height=50px} **Academy**
-
-::::
-
-:::: {.f3}
-Gain **hands-on experience** and explore what {{< var vm.product >}} has to offer with our interactive training environment.
-
-::::
-<br>
-
-:::{#validmind-academy}
-:::
-
-:::
-
-::: {.w-30-ns .mb4 .tc .ph2 .br3 .pt4 .pb3 .ph4}
-
-<!-- ::: {.w-30-ns .mb4 .tc .ph2 .br3 .pt4 .pb3 .ph4}
-
-![](assets/img/hero-platform.png)
-
-::: -->
-
-:::
-
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
-
-::::
-
-:::
-
-
-<!-- RELEASES SECTION -->
-
-::: {.column-screen}
-
-:::: {.flex .flex-wrap .justify-around .releases}
-
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
-
-::: {.w-80-ns .mb4}
-
-:::: {.f2}
+::: {.w-40-ns .mb4 .ph2 .br3 .pt4 .pb3 .ph4}
+:::: {.f2 .tl}
 Latest Releases
-:::: 
-
+::::
 :::{#releases}
+::: {.f3 .tl}
+[View all releases](/releases/2025/2025-apr-24/release-notes.qmd)
 :::
-
-
-:::
-
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
 ::::
-
-:::
