Updted homepage based of the latest design from figma.

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -7,76 +7,68 @@ resources:
   - assets/**
 filters:
     - tachyons
-listing:
-  # - id: developer
-  #   type: grid
-  #   grid-columns: 1
-  #   max-description-length: 250
-  #   sort: false
-  #   fields: [title, description]
-  #   image-height: 250px
-  #   contents:
-  #     - path: get-started/quickstart-developer.qmd
-  #       # image: assets/img/developer-diagram.png
-  # - id: validator
-  #   type: grid
-  #   grid-columns: 1
-  #   max-description-length: 250
-  #   sort: false
-  #   fields: [title, description]
-  #   image-height: 250px
-  #   contents:
-  #     - path: get-started/quickstart-validator.qmd
-  #       # image: assets/img/validator-diagram.png
+# listing:
   # - id: admin
   #   type: grid
   #   grid-columns: 1
   #   max-description-length: 250
   #   sort: false
   #   fields: [title, description]
-  #   image-height: 250px
   #   contents:
-  #     - path: get-started/quickstart-administrator.qmd
-  #       # image: assets/img/admin-diagram.png
-  - id: releases
-    type: grid
-    grid-columns: 1
-    max-description-length: 150
-    sort: false
-    fields: [title, description]
-    contents:
-      - 2024-dec-06/release-notes.qmd
-      #- 2024-oct-22/release-notes.qmd
-      #- 2024-sep-25/release-notes.qmd
-      #- 2024-sep-09/release-notes.qmd
-      #- 2024-aug-13/release-notes.qmd
-      #- 2024-jul-22/release-notes.qmd
-  # - id: validmind-academy
+  #   - /guide/configuration/accessing-validmind.qmd
+  #   - /guide/configuration/managing-your-organization.qmd
+  #   - /guide/configuration/managing-users.qmd
+  # - id: developer
   #   type: grid
   #   grid-columns: 1
-  #   image-height: 350px
+  #   max-description-length: 250
+  #   sort: false
+  #   fields: [title, description]
+  #   contents:
+  #   - /developer/validmind-library.qmd
+  #   - /developer/supported-models.qmd
+  #   - /developer/samples-jupyter-notebooks.qmd
+  # - id: validator
+  #   type: grid
+  #   grid-columns: 1
+  #   max-description-length: 250
+  #   sort: false
+  #   fields: [title, description]
+  #   contents:
+  #   - /guide/model-validation/preparing-validation-reports.qmd
+  #   - /guide/model-validation/working-with-model-findings.qmd
+  #   - /guide/reporting/working-with-analytics.qmd
+  # - id: releases
+  #   type: grid
+  #   grid-columns: 3
+  #   max-description-length: 150
+  #   sort: false
+  #   fields: [title, subtitle, description]
+  #   contents:
+    # MAKE-RELEASE-NOTES-LATEST-MARKER
+      # - /releases/2025/2025-apr-24/release-notes.qmd
+      # - /releases/2025/2025-mar-07/release-notes.qmd
+      # - /releases/2025/2025-jan-31/release-notes.qmd
+    # MAKE-RELEASE-NOTES-OLDEST-MARKER
+  # - id: validmind-academy
+  #   type: grid
+  #   image-height: 200px
   #   sort: false
   #   contents:
-  #   - path: training/training.qmd
-      # image: assets/img/hero-platform.png
-      # title: "ValidMind Academy {{< fa graduation-cap >}}"
-      # subtitle: "Learn by doing {{< fa chevron-right >}}"
-    # - path: training/administrator-fundamentals/administrator-fundamentals-register.qmd
-    #   image: training/administrator-fundamentals/administrator-fundamentals.png
-    #   title: "Administrator Fundamentals {{< fa gear >}}"
-    #   subtitle: "Register now {{< fa chevron-right >}}"
-    # - path: training/developer-fundamentals/developer-fundamentals-register.qmd
-    #   title: "Developer Fundamentals {{< fa code >}}"
-    #   subtitle: "Register now {{< fa chevron-right >}}"
-    #   image: training/developer-fundamentals/developer-fundamentals.png
-    # - path: training/validator-fundamentals/validator-fundamentals-register.qmd
-    #   image: training/validator-fundamentals/validator-fundamentals.png
-    #   title: "Validator Fundamentals {{< fa user-check >}}"
-    #   subtitle: "Register now {{< fa chevron-right >}}"
-    # fields: [title, subtitle]
+  #   - path: training/administrator-fundamentals/administrator-fundamentals-register.qmd
+  #     image: training/administrator-fundamentals/administrator-fundamentals.png
+  #     title: "Administrator Fundamentals {{< fa gear >}}"
+  #     subtitle: "Register now {{< fa chevron-right >}}"
+  #   - path: training/developer-fundamentals/developer-fundamentals-register.qmd
+  #     title: "Developer Fundamentals {{< fa code >}}"
+  #     subtitle: "Register now {{< fa chevron-right >}}"
+  #     image: training/developer-fundamentals/developer-fundamentals.png
+  #   - path: training/validator-fundamentals/validator-fundamentals-register.qmd
+  #     image: training/validator-fundamentals/validator-fundamentals.png
+  #     title: "Validator Fundamentals {{< fa user-check >}}"
+  #     subtitle: "Register now {{< fa chevron-right >}}"
+  #   fields: [image, title, subtitle]
 ---
-
-<!-- <div class="watermark">MOCKUP — NOT A FINAL DESIGN</div> -->
 
 ```{=html}
 <style>
@@ -92,8 +84,9 @@ a:hover {
 
 .card:hover {
   border: 1px solid #083E44;
-  background-color: #F9F9F9;
+  background-color: #EDF9FA;
 }
+
 
 #searchbox {
   max-width: 100%;
@@ -153,7 +146,7 @@ a:hover {
 ::: {.w-60-ns}
 
 <!-- Add a search box to home page-->
-<input id="searchbox" placeholder="What are you looking for?">
+<input id="searchbox" placeholder="Ask a question">
 <div id="hits"></div>
 
 <!-- Use Lunr.js as the search library -->
@@ -162,14 +155,25 @@ a:hover {
 <!-- Enable custom search functionality-->
 <script src="scripts/validsearch.js"></script>
 
-<!-- ::: {.tc}
+::: {.tc}
 [quickstart](get-started/developer/try-with-jupyterhub.qmd){.button-pink .cta}
 [open-source software](https://github.com/validmind/validmind-library/){.button-white .cta}
 
-::: -->
+:::
 
 :::
 
+<!-- ::: {.w-40-ns}
+
+::: {.image-container}
+![](assets/img/platform-line-1.png)
+![](assets/img/platform-line-2.png)
+![](assets/img/platform-line-3.png)
+![](assets/img/platform-line-4.png)
+![](assets/img/platform-line-5.png)
+:::
+
+::: -->
 
 ::: {.w-10-ns}
 <!-- FILLER COLUMN DO NOT REMOVE -->
@@ -179,93 +183,64 @@ a:hover {
 
 :::
 
-<!-- COMBINED SECTION (UNIFIED BLOCK STYLE) -->
+<!-- PAGE-WRAPPING CONTAINER -->
+::: {.column-screen .pt5 .pb5}
 
-::: {.column-screen}
-
-::: {.w-80-ns .center}
-
-:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb4 .ph4}
+<!-- CENTERED WHITE BOX WITH FIXED WIDTH & FULL HEIGHT -->
+::: {.center .br3 .shadow-4 .bg-white .pa5 .w-90-ns .min-vh-100}
 
 <!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
-::: {.flex .justify-between .mb4 .flex-wrap}
+:::: {.flex .flex-wrap .justify-around .mb5}
 
-::: {.w-30-ns .mb3}
-:::: {.ph3}
-:::: {.f4 .tl}
+::: {.w-25-ns .mb3}
+:::: {.items-start}
+![](/homepage_docsite/setup_icon.svg){.mb3 width="48"}
+::::
 ### Setup + Administration
-::::
-::: {.tl}
 Invite users and control access to ValidMind by managing user roles, groups, and permissions.  
-[Setup Quickstart](/training/fake-tour/product-tour.qmd){.button .button-green}
-:::
-:::
+[Setup QuickStart](guide/guides.qmd){.button-green .cta .mt3}
 :::
 
-::: {.w-30-ns .mb3}
-:::: {.ph3}
-:::: {.f4 .tl}
+::: {.w-25-ns .mb3}
+:::: {.items-start}
+![](/homepage_docsite/model_icon.svg){.mb3 width="48"}
+::::
 ### Model Development
-::::
-::: {.tl}
 Save time by automating documentation and testing for your models using the ValidMind Library.  
-[Developer Quickstart](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button .button-green}
-:::
-:::
+[developer quickstart](/validmind/validmind.qmd){.button-green .cta .mt3}
 :::
 
-::: {.w-30-ns .mb3}
-:::: {.ph3}
-:::: {.f4 .tl}
+::: {.w-25-ns .mb3}
+:::: {.items-start}
+![](/homepage_docsite/model_valid_icon.svg){.mb3 width="48"}
+::::
 ### Model Validation
-::::
-::: {.tl}
 Quickly assess compliance by linking evidence from developers in your validation reports.  
-[Validator Quickstart](training/validator-fundamentals/validator-fundamentals-register.qmd){.button .button-green}
-
+[Validator QuickStart](guide/model-validation/manage-validation-guidelines.qmd){.button-green .cta .mt3}
 :::
-:::
-:::
-
-:::
-
-
-<!-- ValidMind Tour -->
-:::: {.tc}
-::: {.background-image style="background-image: url('/assets/img/digitalspace-colours.svg'); background-size: cover; background-position: center;"}
-
-#### ValidMind **Tour**
-
-ValidMind is a toolkit that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.
-
-[Validator Quickstart](/training/fake-tour/product-tour.qmd){.button .button-green}
 ::::
 
-<!-- Academy | Releases -->
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-40-ns .mb4 .ph2 .br3 .pt4 .pb3 .ph4}
-:::: {.f2 .tl}
-**Validmind Academy**
-::::
-
-:::: {.f3 .tl}
-Gain **hands-on experience** and explore what {{< var vm.product >}} has to offer with our interactive training environment.
-::::
-
-::: {.f2 .tl}
-[Learn by doing](/training/training.qmd){.button .button-green}
-:::
+<!-- VALIDMIND TOUR -->
+::: {.tc .mt5 .mb5}
+### ValidMind *Tour*
+ValidMind is a toolkit that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.  
+[What is ValidMind?](/training/fake-tour/product-tour.qmd){.button-green .cta .mt3}
 :::
 
-::: {.w-40-ns .mb4 .ph2 .br3 .pt4 .pb3 .ph4}
-:::: {.f2 .tl}
-Latest Releases
-::::
-:::{#releases}
-::: {.f3 .tl}
-[View all releases](/releases/2025/2025-apr-24/release-notes.qmd)
-:::
+<!-- FINAL ROW: Academy and Latest Release TEXT SIDE-BY-SIDE -->
+:::: {.flex .flex-wrap .justify-around .mt5}
+
+::: {.w-50-ns .pr4}
+### ValidMind Academy  
+Gain hands-on experience and explore what ValidMind has to offer with our interactive training environment.  
+[Learn through doing](/training/academy.qmd){.button-green .cta .mt3}
 :::
 
-::::
+::: {.w-50-ns .pl4}
+### Latest Release  
+#### v1.26.09 / January 24, 2025  
+We’ve introduced two new quickstart Jupyter Notebooks dealing with option pricing in the Capital Markets section of our code samples.  
+[View all releases](/releases/all-releases.qmd){.button-green .cta .mt3}
+:::
+
+:::: 
