--- a/site/index.qmd
+++ b/site/index.qmd
@@ -155,11 +155,11 @@ a:hover {
 <!-- Enable custom search functionality-->
 <script src="scripts/validsearch.js"></script>
 
-::: {.tc}
+<!-- ::: {.tc}
 [quickstart](get-started/developer/try-with-jupyterhub.qmd){.button-pink .cta}
 [open-source software](https://github.com/validmind/validmind-library/){.button-white .cta}
 
-:::
+::: -->
 
 :::
 
@@ -184,10 +184,10 @@ a:hover {
 :::
 
 <!-- PAGE-WRAPPING CONTAINER -->
-::: {.column-screen .pt5 .pb5}
+::: {.column-screen}
 
 <!-- CENTERED WHITE BOX WITH FIXED WIDTH & FULL HEIGHT -->
-::: {.center .br3 .shadow-4 .bg-white .pa5 .w-90-ns .min-vh-100}
+::: {.center .br3 .shadow-4 .bg-white .pa5 .w-80-ns .min-vh-100}
 
 <!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
 :::: {.flex .flex-wrap .justify-around .mb5}
@@ -221,7 +221,7 @@ Quickly assess compliance by linking evidence from developers in your validation
 ::::
 
 <!-- VALIDMIND TOUR -->
-::: {.tc .mt5 .mb5}
+::: {.tour-bg .tc .mt5 .mb5}
 ### ValidMind *Tour*
 ValidMind is a toolkit that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.  
 [What is ValidMind?](/training/fake-tour/product-tour.qmd){.button-green .cta .mt3}
@@ -244,3 +244,4 @@ We’ve introduced two new quickstart Jupyter Notebooks dealing with option pric
 :::
 
 :::: 
+
